--- a/WillIBeHome.Api/WillIBeHome.Api.csproj
+++ b/WillIBeHome.Api/WillIBeHome.Api.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.ML" Version="0.16.0-preview" />
+    <PackageReference Include="Microsoft.Extensions.ML" Version="1.4.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
   </ItemGroup>
 
