--- a/WillIBeHome.Trainer/WillIBeHome.Trainer.csproj
+++ b/WillIBeHome.Trainer/WillIBeHome.Trainer.csproj
@@ -23,7 +23,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.0.0" />
-    <PackageReference Include="Microsoft.ML" Version="1.4.0-preview" />
+    <PackageReference Include="Microsoft.ML" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
