--- a/WillIBeHome.Trainer/WillIBeHome.Trainer.csproj
+++ b/WillIBeHome.Trainer/WillIBeHome.Trainer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>37D01C3D-84DF-4045-AC41-DDFD7B907144</UserSecretsId>
   </PropertyGroup>
 
