--- a/WillIBeHome.Owntracks/WillIBeHome.Owntracks.csproj
+++ b/WillIBeHome.Owntracks/WillIBeHome.Owntracks.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="4.7.2" />
+    <PackageReference Include="System.Text.Json" Version="5.0.0-rc.1.20451.14" />
   </ItemGroup>
 
 </Project>
